--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -2,6 +2,17 @@
   "app": {
     "title": "Marco Project",
     "header": { "darkmode": "Toggle theme", "locale": "Language" },
-    "footer": { "login": { "ok": "Connected" } }
+    "footer": { "login": { "ok": "Connected" } },
+    "settings": {
+      "title": "Settings",
+      "lang_card": {
+        "title": "Language & Region",
+        "select_label": "Language",
+        "apply": "Apply"
+      },
+      "log": {
+        "title": "Command log"
+      }
+    }
   }
 }
