--- a/appbase/i18n/pt-BR.json
+++ b/appbase/i18n/pt-BR.json
@@ -5,13 +5,22 @@
     "footer": { "login": { "ok": "Conectado" } },
     "settings": {
       "title": "Configurações",
+      "subtitle": "Gerencie idioma e região do AppBase.",
+      "close": "Fechar painel de configurações",
       "lang_card": {
         "title": "Idioma & Região",
+        "description": "Escolha o idioma preferido para o AppBase.",
         "select_label": "Idioma",
-        "apply": "Aplicar"
+        "apply": "Aplicar",
+        "options": {
+          "pt-BR": "Português (Brasil)",
+          "en-US": "Inglês (Estados Unidos)",
+          "es-ES": "Espanhol (Espanha)"
+        }
       },
       "log": {
-        "title": "Log de comandos"
+        "title": "Log de comandos",
+        "subtitle": "Registros das ações de idioma."
       }
     }
   }
