--- a/appbase/i18n/pt-BR.json
+++ b/appbase/i18n/pt-BR.json
@@ -95,10 +95,10 @@
           "email": "E-mail",
           "phone": "Telefone",
           "phone_placeholder": "(99) 99999-9999",
-          "password": "Senha",
+          "password": "PIN de acesso",
           "password_toggle": {
-            "show": "Mostrar senha",
-            "hide": "Ocultar senha"
+            "show": "Mostrar PIN",
+            "hide": "Ocultar PIN"
           }
         },
         "submit": "Salvar alterações",
@@ -106,7 +106,7 @@
           "error": "Informe nome e e-mail para continuar.",
           "success": "Cadastro atualizado com sucesso.",
           "phone_invalid": "Informe um telefone brasileiro com 10 ou 11 dígitos.",
-          "password_missing": "Informe uma senha para continuar.",
+          "password_missing": "Informe um PIN para continuar.",
           "password_mismatch": "O PIN informado não corresponde ao PIN atual.",
           "pin_length": "Informe um PIN com exatamente 4 dígitos.",
           "email_duplicate": "Este e-mail já está em uso."
