Revert overlay adjustments in panel tests

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -54,10 +54,10 @@
   "panel.settings.note": "Quick tenant configuration, registered schemas, and observability will appear here.",
   "breadcrumbs.home": "Home",
   "breadcrumbs.miniapps": "Mini-apps",
-  "operations.header.title": "Mini-app • Operations Panel",
-  "operations.header.breadcrumb": "Operations Panel",
+  "operations.header.title": "Mini-app • Control Panel",
+  "operations.header.breadcrumb": "Control Panel",
   "operations.actions.export": "Export panel",
-  "operations.note": "Base masters prepared to receive subcards.",
+  "operations.note": "System panel monitoring session, sync, and backups.",
   "operations.card.kpis": "System KPIs",
   "operations.card.data": "Data / Summaries",
   "operations.card.other": "Other panels",
@@ -135,11 +135,11 @@
   "market.catalog.required": "Required",
   "market.catalog.disable": "Disable",
   "market.catalog.enable": "Enable",
-  "market.catalog.operations.title": "Operations Panel",
-  "market.catalog.operations.description": "KPIs, master data, and unified tenant status.",
-  "market.catalog.operations.capability1": "KPIs",
-  "market.catalog.operations.capability2": "Alerts",
-  "market.catalog.operations.capability3": "Workflow",
+  "market.catalog.operations.title": "Control Panel",
+  "market.catalog.operations.description": "Session, sync, and backups monitored in real time.",
+  "market.catalog.operations.capability1": "Sync",
+  "market.catalog.operations.capability2": "Backup",
+  "market.catalog.operations.capability3": "Session",
   "market.catalog.operations.license": "License: Base",
   "market.catalog.tasks.title": "Task Manager",
   "market.catalog.tasks.description": "Schedules, owners, and critical dependencies.",
@@ -207,12 +207,12 @@
   "miniapps.card.open": "Open full view of {{label}}",
   "miniapps.card.openPanel": "Open MiniAppPanel for {{label}}",
   "miniapps.card.more": "Open mini-app panel",
-  "miniapps.operations.label": "Operations Panel",
-  "miniapps.operations.meta": "KPIs, master data, and resource status",
-  "miniapps.operations.cta": "Open detailed panel",
-  "miniapps.operations.badge1": "KPIs",
-  "miniapps.operations.badge2": "Alerts",
-  "miniapps.operations.panel": "Operations masters ready to receive subcards.",
+  "miniapps.operations.label": "Control Panel",
+  "miniapps.operations.meta": "Unified system panel for login, sync, and backups",
+  "miniapps.operations.cta": "Open control panel",
+  "miniapps.operations.badge1": "System",
+  "miniapps.operations.badge2": "Sync",
+  "miniapps.operations.panel": "Control panel with essential integrations.",
   "miniapps.tasks.label": "Task Manager",
   "miniapps.tasks.meta": "Schedules, owners, and consumed data",
   "miniapps.tasks.cta": "Open task list",
@@ -242,13 +242,13 @@
   "export.feedback.success": "Export generated for {{label}}.",
   "export.feedback.shared": "Export shared successfully for {{label}}.",
   "export.feedback.error": "Could not generate the PDF for this section.",
-  "export.operations.title": "Marco · Operations Panel",
-  "export.operations.subtitle": "Mini-app • Operations Panel",
-  "export.operations.description": "Operations panel summary with masters and expansion areas.",
-  "export.operations.heading1": "System KPIs",
-  "export.operations.heading2": "Data / Summaries",
-  "export.operations.heading3": "Other panels",
-  "export.operations.heading4": "Area to expand",
+  "export.operations.title": "Marco · Control Panel",
+  "export.operations.subtitle": "Mini-app • Control Panel",
+  "export.operations.description": "Control panel summary with session, sync, and backup status.",
+  "export.operations.heading1": "Session overview",
+  "export.operations.heading2": "Synchronization",
+  "export.operations.heading3": "Backup",
+  "export.operations.heading4": "Events",
   "export.tasks.title": "Marco · Task Manager",
   "export.tasks.subtitle": "Mini-app • Task Manager",
   "export.tasks.description": "Export of the task view, active filters, and system tips.",
