--- a/src/locales/pt-BR.json
+++ b/src/locales/pt-BR.json
@@ -54,10 +54,10 @@
   "panel.settings.note": "Configurações rápidas do tenant, schemas registrados e observabilidade sumarizada aparecerão aqui.",
   "breadcrumbs.home": "Home",
   "breadcrumbs.miniapps": "Mini-apps",
-  "operations.header.title": "Mini-app • Painel de Operações",
-  "operations.header.breadcrumb": "Painel de Operações",
+  "operations.header.title": "Mini-app • Painel de Controles",
+  "operations.header.breadcrumb": "Painel de Controles",
   "operations.actions.export": "Exportar painel",
-  "operations.note": "Masters base preparados para receber os subcards.",
+  "operations.note": "Painel do sistema com sessão, sincronização e backups monitorados.",
   "operations.card.kpis": "KPIs do sistema",
   "operations.card.data": "Dados / Resumos",
   "operations.card.other": "Outros painéis",
@@ -135,11 +135,11 @@
   "market.catalog.required": "Obrigatório",
   "market.catalog.disable": "Desabilitar",
   "market.catalog.enable": "Habilitar",
-  "market.catalog.operations.title": "Painel de Operações",
-  "market.catalog.operations.description": "KPIs, dados mestres e status unificado do tenant.",
-  "market.catalog.operations.capability1": "KPIs",
-  "market.catalog.operations.capability2": "Alertas",
-  "market.catalog.operations.capability3": "Workflow",
+  "market.catalog.operations.title": "Painel de Controles",
+  "market.catalog.operations.description": "Sessão, sincronização e backups monitorados em tempo real.",
+  "market.catalog.operations.capability1": "Sync",
+  "market.catalog.operations.capability2": "Backup",
+  "market.catalog.operations.capability3": "Sessão",
   "market.catalog.operations.license": "Licença: Base",
   "market.catalog.tasks.title": "Gestor de Tarefas",
   "market.catalog.tasks.description": "Cronogramas, responsáveis e dependências críticas.",
@@ -207,12 +207,12 @@
   "miniapps.card.open": "Abrir visão completa de {{label}}",
   "miniapps.card.openPanel": "Abrir MiniAppPanel de {{label}}",
   "miniapps.card.more": "Abrir painel de mini-app",
-  "miniapps.operations.label": "Painel de Operações",
-  "miniapps.operations.meta": "KPIs, dados mestres e status de recursos",
-  "miniapps.operations.cta": "Abrir painel detalhado",
-  "miniapps.operations.badge1": "KPIs",
-  "miniapps.operations.badge2": "Alertas",
-  "miniapps.operations.panel": "Masters do painel operacional prontos para receber subcards.",
+  "miniapps.operations.label": "Painel de Controles",
+  "miniapps.operations.meta": "Painel unificado de login, sync e backup do sistema",
+  "miniapps.operations.cta": "Abrir painel de controles",
+  "miniapps.operations.badge1": "Sistema",
+  "miniapps.operations.badge2": "Sync",
+  "miniapps.operations.panel": "Painel de controles com integrações essenciais.",
   "miniapps.tasks.label": "Gestor de Tarefas",
   "miniapps.tasks.meta": "Cronogramas, responsáveis e dados consumidos",
   "miniapps.tasks.cta": "Abrir lista de tarefas",
@@ -242,13 +242,13 @@
   "export.feedback.success": "Exportação gerada para {{label}}.",
   "export.feedback.shared": "Exportação compartilhada com sucesso para {{label}}.",
   "export.feedback.error": "Não foi possível gerar o PDF desta seção.",
-  "export.operations.title": "Marco · Painel de Operações",
-  "export.operations.subtitle": "Mini-app • Painel de Operações",
-  "export.operations.description": "Resumo do painel operacional com masters e áreas de expansão.",
-  "export.operations.heading1": "KPIs do sistema",
-  "export.operations.heading2": "Dados / Resumos",
-  "export.operations.heading3": "Outros painéis",
-  "export.operations.heading4": "Área p/ expandir",
+  "export.operations.title": "Marco · Painel de Controles",
+  "export.operations.subtitle": "Mini-app • Painel de Controles",
+  "export.operations.description": "Resumo do painel de controles com status de sessão, sync e backup.",
+  "export.operations.heading1": "Resumo da sessão",
+  "export.operations.heading2": "Sincronização",
+  "export.operations.heading3": "Backup",
+  "export.operations.heading4": "Eventos",
   "export.tasks.title": "Marco · Gestor de Tarefas",
   "export.tasks.subtitle": "Mini-app • Gestor de Tarefas",
   "export.tasks.description": "Exportação da visão de tarefas, filtros ativos e dicas do sistema.",
