--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -130,6 +130,7 @@
         "title": "Activity history",
         "subtitle": "Track logins, logoffs, and language changes recorded in this browser.",
         "table": {
+          "revision": "Revision",
           "event": "Event",
           "time": "Time"
         }
@@ -157,7 +158,13 @@
         "dirty": "Unsaved changes",
         "disabled": "Unavailable offline"
       },
-      "meta": "Developed by 5Horas • Marco Project — AppBase R1.1",
+      "meta": {
+        "base": "Developed by 5Horas • Marco Project — AppBase R1.1",
+        "revision": {
+          "value": "Revision {{revision}} • Updated on {{datetime}}",
+          "empty": "Initial revision • Waiting for updates"
+        }
+      },
       "login": { "ok": "Connected" }
     },
     "settings": {
