--- a/appbase/i18n/pt-BR.json
+++ b/appbase/i18n/pt-BR.json
@@ -130,6 +130,7 @@
         "title": "Histórico de atividades",
         "subtitle": "Acompanhe logins, logoffs e trocas de idioma registradas neste navegador.",
         "table": {
+          "revision": "Revisão",
           "event": "Evento",
           "time": "Horário"
         }
@@ -157,7 +158,13 @@
         "dirty": "Alterações pendentes",
         "disabled": "Indisponível offline"
       },
-      "meta": "Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1",
+      "meta": {
+        "base": "Desenvolvido por 5Horas • Projeto Marco — AppBase R1.1",
+        "revision": {
+          "value": "Revisão {{revision}} • Atualizado em {{datetime}}",
+          "empty": "Revisão inicial • Aguardando atualizações"
+        }
+      },
       "login": { "ok": "Conectado" }
     },
     "settings": {
