Add collapsible miniapp rail

--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -19,6 +19,12 @@
         "title": "Control panel",
         "subtitle": "Detailed view"
       },
+      "rail": {
+        "toggle": {
+          "collapse": "Hide miniapps",
+          "expand": "Show miniapps"
+        }
+      },
       "theme": {
         "light": "Enable dark mode",
         "dark": "Enable light mode"
