--- a/appbase/i18n/es-ES.json
+++ b/appbase/i18n/es-ES.json
@@ -19,6 +19,12 @@
         "title": "Panel de control",
         "subtitle": "Vista detallada"
       },
+      "rail": {
+        "toggle": {
+          "collapse": "Ocultar miniapps",
+          "expand": "Mostrar miniapps"
+        }
+      },
       "theme": {
         "light": "Activar modo oscuro",
         "dark": "Activar modo claro"
