Align Painel docs with manual requirements

--- a/appbase/i18n/en-US.json
+++ b/appbase/i18n/en-US.json
@@ -42,7 +42,10 @@
     },
     "rail": {
       "label": "Miniapps",
-      "empty": "Empty slot — Add a miniapp"
+      "empty": "Empty slot — Add a mini-app",
+      "loading": "Loading miniapps…",
+      "error": "Unable to load miniapps.",
+      "fallback": "Loaded via local fallback"
     },
     "stage": {
       "empty": {
