--- a/appbase/i18n/es-ES.json
+++ b/appbase/i18n/es-ES.json
@@ -42,7 +42,10 @@
     },
     "rail": {
       "label": "Miniapps",
-      "empty": "Espacio vacío — Añade una miniapp"
+      "empty": "Espacio vacío — Añade una miniapp",
+      "loading": "Cargando miniapps…",
+      "error": "No se pudieron cargar los miniapps.",
+      "fallback": "Cargado mediante fallback local"
     },
     "stage": {
       "empty": {
